--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   "license": "ISC",
   "dependencies": {
     "bcrypt": "^5.1.0",
+    "connect-session-sequelize": "^7.1.5",
     "dotenv": "^16.0.3",
     "ejs": "^3.1.8",
     "env": "^0.0.2",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "pg": "^8.8.0",
     "pg-hstore": "^2.3.4",
     "postcss-cli": "^10.1.0",
