--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
+  "engines": {
+    "node":"14.x"
+  },
   "name": "blog",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start":"nodemon",
     "tailwind:css": "postcss public/css/tailwind.css -o public/css/style.css",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
